--- a/actual_results_comparison.html
+++ b/actual_results_comparison.html
@@ -11,18 +11,14 @@
             margin: 10px;
             background-color: #1e1e1e;
             color: #7c7a7a;
+            font-size: 10px; /* Adjust the base font size */
         }
 
         table {
             width: 100%;
             border-collapse: collapse;
             margin-bottom: 10px;
-        }
-
-        table,
-        th,
-        td {
-            border: 1px solid black;
+            font-size: 8px; /* Adjust the table font size */
         }
 
         th,
@@ -40,6 +36,7 @@
             background-color: #6b6a6a;
             color: #fff;
             border: 1px solid #444444;
+            font-size: 12px; /* Adjust the select font size */
         }
 
         .comparison-container {
