--- a/participants_comparison.html
+++ b/participants_comparison.html
@@ -122,6 +122,33 @@
             'Czechia': 'https://flagcdn.com/w20/cz.png'
         };
 
+        const abbreviations = {
+            'Germany': 'GER',
+            'Scotland': 'SCO',
+            'Hungary': 'HUN',
+            'Switzerland': 'SUI',
+            'Spain': 'ESP',
+            'Croatia': 'CRO',
+            'Italy': 'ITA',
+            'Albania': 'ALB',
+            'Serbia': 'SRB',
+            'England': 'ENG',
+            'Slovenia': 'SVN',
+            'Denmark': 'DEN',
+            'Poland': 'POL',
+            'Netherlands': 'NED',
+            'Austria': 'AUT',
+            'France': 'FRA',
+            'Romania': 'ROU',
+            'Ukraine': 'UKR',
+            'Belgium': 'BEL',
+            'Slovakia': 'SVK',
+            'Turkey': 'TUR',
+            'Georgia': 'GEO',
+            'Portugal': 'POR',
+            'Czechia': 'CZE'
+        };
+
         function populateDropdowns(participants) {
             const dropdowns = [document.getElementById('participant1'), document.getElementById('participant2'), document.getElementById('participant3')];
             participants.forEach(participant => {
@@ -155,13 +182,14 @@
                             row.forEach(cell => {
                                 const cellContent = cell.trim();
                                 const flagImg = flags[cellContent] ? `<img src="${flags[cellContent]}" class="flag"> ` : '';
+                                const abbreviation = abbreviations[cellContent] ? abbreviations[cellContent] : cellContent;
                                 const boldText = [
                                     'Group Stage Predictions', 'Group A', 'Group B', 'Group C', 'Group D', 'Group E', 'Group F',
                                     'Knockout Stage Predictions', 'Round of 16', 'Quarterfinals', 'Semifinals', 'Final',
                                     'Top Goalscorer', 'Best Goalkeeper', 'Player of Tournament'
                                 ];
                                 const cellClass = boldText.includes(cellContent) ? 'bold-text' : '';
-                                tableHTML += `<td class="${cellClass}">${flagImg}${cellContent}</td>`;
+                                tableHTML += `<td class="${cellClass}">${flagImg}${abbreviation}</td>`;
                             });
                             tableHTML += '</tr>';
                         });
