--- a/download_pdf.html
+++ b/download_pdf.html
@@ -26,8 +26,8 @@
         }
 
         button {
-            background-color: #4CAF50;
-            color: white;
+            background-color: white;
+            color: black;
             padding: 15px 32px;
             text-align: center;
             text-decoration: none;
@@ -35,7 +35,7 @@
             font-size: 16px;
             margin: 4px 2px;
             cursor: pointer;
-            border: none;
+            border: 2px solid black;
         }
     </style>
 </head>
