--- a/participants_comparison.html
+++ b/participants_comparison.html
@@ -19,6 +19,7 @@
             margin-bottom: 10px;
             vertical-align: top;
             justify-content: center;
+            table-layout: fixed;
         }
 
         table,
@@ -35,6 +36,11 @@
 
         th {
             background-color: #333333;
+        }
+
+        th:first-child,
+        td:first-child {
+            width: 15%;
         }
 
         select {
