--- a/participants_comparison.html
+++ b/participants_comparison.html
@@ -16,10 +16,10 @@
         table {
             width: 100%;
             border-collapse: collapse;
+            margin: 0px;
             margin-bottom: 10px;
             vertical-align: top;
             justify-content: center;
-            table-layout: fixed;
         }
 
         table,
