--- a/participants_comparison.html
+++ b/participants_comparison.html
@@ -31,7 +31,7 @@
         th,
         td {
             padding: 8px;
-            text-align: left;
+            text-align: center;
         }
 
         th {
@@ -51,8 +51,7 @@
         }
 
         .comparison-container {
-            display: flex;
-            justify-content: space-between;
+            justify-content: center;
         }
 
         .participant-container {
