--- a/participants_comparison.html
+++ b/participants_comparison.html
@@ -51,7 +51,8 @@
         }
 
         .comparison-container {
-            justify-content: center;
+            display: flex;
+            justify-content: space-between;
         }
 
         .participant-container {
