--- a/participants_comparison.html
+++ b/participants_comparison.html
@@ -16,7 +16,7 @@
         table {
             width: 100%;
             border-collapse: collapse;
-            margin: 0px;
+            margin: 0;
             margin-bottom: 10px;
             vertical-align: top;
             justify-content: center;
@@ -68,8 +68,14 @@
         .bold-text {
             font-weight: bold;
         }
+
+        .flag {
+            vertical-align: middle;
+            margin-right: 5px;
+        }
     </style>
 </head>
+
 
 <body>
     <div class="logo-container">
